# PueueWrapper

./: README.md  STRUCTURED_LOGS.md  TODO.md  api.py  example_status.py  example_usage.py  pueue_sync_wrapper.py  pueue_wrapper.py  pyproject.toml
.cursor/rules/: README.md  code-style.mdc  project-structure.mdc  pueue-wrapper-architecture.mdc  python-development.mdc  uv-commands.mdc
.specstory/history/: 2025-03-28_05-31-pydantic-data-model-for-tasks-and-groups.md  2025-03-28_06-41-untitled.md  2025-08-29_07-50Z-分析-pueue-log-json-並整理成-pydantic-模型.md  2025-08-29_08-19Z-generate-project-structure-and-guidelines.md  2025-08-29_08-37Z-規劃-pueue-cli-功能實現.md  2025-08-29_08-42Z-implement-submit-and-wait-and-get-output-function.md  2025-08-29_08-52Z-streamlit-ui-for-task-management.md  2025-08-29_09-15Z-新增-pueue-api-server-指令.md  2025-09-01_06-27Z-expand-get-status-functionality-and-optimize-apis.md  2025-09-02_06-21Z-重構-pueue-wrapper-和-pueue-sync-wrapper.md
docs/: ChatGPT.md  DeepWiki.md  NEW_FEATURES.md  TEST_RESULTS.md  UI_FEATURES.md
examples/: example_new_features.py  example_status.py  example_usage.py  test_async_features.py  test_sync_features.py  test_ui.py
models/: __init__.py  base.py  logs.py
src/pueue_wrapper/: __init__.py  pueue_sync_wrapper.py  pueue_wrapper.py
src/pueue_wrapper/api/: api.py  run_api_server.py
src/pueue_wrapper/core/: __init__.py  async_core.py  sync_core.py
src/pueue_wrapper/extensions/: __init__.py  advanced.py  statistics.py
src/pueue_wrapper/models/: __init__.py  base.py  logs.py  status.py
src/pueue_wrapper/ui/: Overview.py  README.md  run_ui_server.py  shared_components.py
src/pueue_wrapper/ui/pages/: Group_Statistics.py  Group_Time_Details.py  Groups.py  Help.py  Logs.py  Submit_Task.py  Task_Management.py  Task_Status.py  Task_Templates.py
