[project]
name = "pueue_wrapper"
version = "0.2.3"
description = "A wrapper for Pueue"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "pydantic>=2.11.0",
    "tyro>=0.8.14",
    "uvicorn>=0.34.0",
]

[project.scripts]
pueue-api-server = "pueue_wrapper.api.run_api_server:cli"
pueue-ui-server = "pueue_wrapper.ui.run_ui_server:cli"

[dependency-groups]
dev = [
    "black>=25.1.0",
]

ui = [
    "streamlit>=1.49.0",
    "plotly>=5.0.0",
    "watchdog>=6.0.0",
]

# Make the package installable

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pueue_wrapper"]

# CN Mirrors

# https://github.com/astral-sh/uv/issues/6925
[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
